# cpp_catch_example

./: CMakeLists.txt  README.md  main.cpp
tests/: tests-factorial.cpp
